chinh sua lai theme color, chinh sua code logic cho phan du bao, them huong dan, rut gon code BoardPage va tao helper file